--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <meta charset="utf-8">
   <title>UnoChallenge</title>
   <base href="/">
@@ -8,7 +12,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
+  <dialog-outlet></dialog-outlet>
 </body>
+
 </html>
